--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Syncfusion React Spreadsheet Demo</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons" />
   </head>
   <body>
     <div id="root"></div>
